--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typedefs": "file:../typedefs",
     "typescript": "^4.3.4"
   },
   "scripts": {
